added language icons

--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
 
 <!-- Skills -->
 <!-- icons with links to all of the different languages and libraries-->
+<!-- bootstrap icon -->
+<i class="fab fa-bootstrap"></i>
+<!-- css icon -->
+<i class="fab fa-css3-alt"></i>
+<!-- html icon -->
+<i class="fab fa-html5"></i>
+<!-- python icon -->
+<i class="fab fa-python"></i>
+<!-- javascript icon -->
+<i class="fab fa-js-square"></i>
+<!-- nodejs icon-->
+<i class="fab fa-node-js"></i>
+<!-- npm icon-->
+<i class="fab fa-npm"></i>
 <a id="skills"></a>
 <div class="container-fluid" style="padding-top: 1%">
     <div class="row" id="main">
