--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Mike Stanley's Portfolio</title>
 </head>
+
 <!-- landing page with links to all sections -->
 <!-- everything but the landing page is hidden -->
 <div class="container-fluid" id="landing">
@@ -58,7 +59,7 @@
 <!-- anchor used for navbar -->
 <a id="about"></a>
 <div class="container-fluid content">
-    <div class="row" id="main">
+    <div class="row">
         <div class="col-xs-0 col-sm-1 col-md-2"></div>
         <div class="col-xs-12 col-sm-10 col-md-8">
             <div class="card text-left">
@@ -88,7 +89,7 @@
 <!-- anchor used for navbar -->
 <a id="skills"></a>
 <div class="container-fluid content">
-    <div class="row" id="main">
+    <div class="row">
         <div class="col-xs-0 col-sm-1 col-md-2"></div>
         <div class="col-xs-12 col-sm-10 col-md-8">
             <div class="card text-left">
@@ -96,21 +97,41 @@
                 <hr>
                 <div class="card-body">
                     <div class="row">
-                        <!-- icons with links to all of the different languages and libraries-->
-                        <!-- bootstrap icon -->
-                        <i class="fab fa-bootstrap"></i>
-                        <!-- css icon -->
-                        <i class="fab fa-css3-alt"></i>
-                        <!-- html icon -->
-                        <i class="fab fa-html5"></i>
-                        <!-- python icon -->
-                        <i class="fab fa-python"></i>
-                        <!-- javascript icon -->
-                        <i class="fab fa-js-square"></i>
-                        <!-- nodejs icon-->
-                        <i class="fab fa-node-js"></i>
-                        <!-- npm icon-->
-                        <i class="fab fa-npm"></i>
+                        <figure>
+                            <!-- bootstrap icon -->
+                            <i class="fab fa-bootstrap"></i>
+                            <figcaption>Bootstrap</figcaption>
+                        </figure>
+                        <figure>
+                            <!-- css icon -->
+                            <i class="fab fa-css3-alt"></i>
+                            <figcaption>CSS</figcaption>
+                        </figure>
+                        <figure>
+                            <!-- html icon -->
+                            <i class="fab fa-html5"></i>
+                            <figcaption>HTML</figcaption>
+                        </figure>
+                        <figure>
+                            <!-- python icon -->
+                            <i class="fab fa-python"></i>
+                            <figcaption>Python</figcaption>
+                        </figure>
+                        <figure>
+                            <!-- javascript icon -->
+                            <i class="fab fa-js-square"></i>
+                            <figcaption>JavaScript</figcaption>
+                        </figure>
+                        <figure>
+                            <!-- nodejs icon-->
+                            <i class="fab fa-node-js"></i>
+                            <Figcaption>nodeJS</Figcaption>
+                        </figure>
+                        <figure>
+                            <!-- npm icon-->
+                            <i class="fab fa-npm"></i>
+                            <figcaption>npm</figcaption>
+                        </figure>
                     </div>
                 </div>
             </div>
@@ -124,7 +145,7 @@
 <!-- anchor used for navbar -->
 <a id="resume"></a>
 <div class="container-fluid content">
-    <div class="row" id="main">
+    <div class="row">
         <div class="col-xs-0 col-sm-1 col-md-2"></div>
         <div class="col-xs-12 col-sm-10 col-md-8">
             <div class="card text-left">
@@ -146,135 +167,180 @@
 <!-- anchor used for navbar -->
 <a id="projects"></a>
 <div class="container-fluid content">
-    <div class="row" id="main">
+    <div class="row">
         <div class="col-xs-0 col-sm-1 col-md-2"></div>
+
         <div class="col-xs-12 col-sm-10 col-md-8">
             <div class="card text-left">
                 <h1>Projects</h1>
                 <hr>
                 <div class="card-body">
-                    <div class="row" id="main1">
+                    <!-- row 1 -->
+                    <div class="row" id="projectRow1">
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <img class="figure-img img-fluid rounded" src="" alt="text">
+                                <a href="">
+                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                </a>
                             </figure>
-                            <h4>Balloon Game</h4>
+                            <h4 class="projectLabel">Balloon Game</h4>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <img class="figure-img img-fluid rounded" src="" alt="text">
+                                <a href="">
+                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                </a>
                             </figure>
-                            <h4>Dogger</h4>
+                            <h4 class="projectLabel">Dogger</h4>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <img class="figure-img img-fluid rounded" src="" alt="text">
+                                <a href="">
+                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                </a>
                             </figure>
-                            <h4>Sandbox</h4>
+                            <h4 class="projectLabel">Sandbox</h4>
                         </div>
                     </div>
                     <br>
-                    <div class="row" id="main2">
+                    <!-- row 2 -->
+                    <div class="row" id="projectRow2">
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <img class="figure-img img-fluid rounded" src="" alt="text">
+                                <a href="">
+                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                </a>
                             </figure>
-                            <h4>Vine-Yo</h4>
+                            <h4 class="projectLabel">Vine-Yo</h4>
+                        </div>
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <figure class="figure">
+                            <a href="">
+                                <img class="figure-img img-fluid rounded" src="" alt="text">
+                            </a>
+                        </figure>
+                        <h4 class="projectLabel">Trail Finder</h4>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <figure class="figure">
+                            <a href="">
+                                <img class="figure-img img-fluid rounded" src="" alt="text">
+                            </a>
+                        </figure>
+                        <h4 class="projectLabel">Vine-Yo</h4>
+                    </div>
+                    <!-- row 3 -->
+                    <div class="row" id="projectRow3">
+                        <div class="col-xs-12 col-sm-6 col-xl-4">
+                            <figure class="figure">
+                                <a href="">
+                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                </a>
+                            </figure>
+                            <h4 class="projectLabel">Vine-Yo</h4>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <img class="figure-img img-fluid rounded" src="" alt="text">
+                                <a href="">
+                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                </a>
                             </figure>
-                            <h4>Trail Finder</h4>
+                            <h4 class="projectLabel">Trail Finder</h4>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-xl-4">
+                            <figure class="figure">
+                                <a href="">
+                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                </a>
+                            </figure>
+                            <h4 class="projectLabel">Vine-Yo</h4>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-4"></div>
                     </div>
+                    </div>
                 </div>
             </div>
+            <div class="col-xs-0 col-sm-1 col-md-2"></div>
         </div>
-        <div class="col-xs-0 col-sm-1 col-md-2"></div>
     </div>
-</div>
 
-<!-- Contact -->
-<!-- anchor used for navbar -->
-<a id="contact"></a>
-<div class="container-fluid content">
-    <div class="row" id="main">
-        <div class="col-xs-0 col-sm-1 col-md-2"></div>
-        <!-- all content goes in centered column below -->
-        <div class="col-xs-12 col-sm-10 col-md-8">
-            <div class="card text-left">
-                <!-- card heading -->
-                <h1>Contact</h1>
-                <hr>
-                <!-- contact information -->
-                <div id="contactInfo">
-                    <h4>Phone: (214) 208-9815</h4>
-                    <h4>Email: MichaelRStanley87@gmail.com</h4>
-                </div>
-                <!-- social media links -->
-                <div id="socialMedia">
-                    <div id="gitHub">
-                        <!-- github icon -->
-                        <i class="fab fa-github"></i>
+    <!-- Contact -->
+    <!-- anchor used for navbar -->
+    <a id="contact"></a>
+    <div class="container-fluid content">
+        <div class="row">
+            <div class="col-xs-0 col-sm-1 col-md-2"></div>
+            <!-- all content goes in centered column below -->
+            <div class="col-xs-12 col-sm-10 col-md-8">
+                <div class="card text-left">
+                    <!-- card heading -->
+                    <h1>Contact</h1>
+                    <hr>
+                    <!-- contact information -->
+                    <div id="contactInfo">
+                        <h4>Phone: (214) 208-9815</h4>
+                        <h4>Email: MichaelRStanley87@gmail.com</h4>
                     </div>
-                    <div id="linkedIn">
-                        <!-- linkedin icon -->
-                        <i class="fab fa-linkedin"></i>
+                    <!-- social media links -->
+                    <div id="connect">
+                        <div id="gitHub">
+                            <!-- github icon -->
+                            <i class="fab fa-github"></i>
+                        </div>
+                        <div id="linkedIn">
+                            <!-- linkedin icon -->
+                            <i class="fab fa-linkedin"></i>
+                        </div>
+                        <!-- email modal button -->
+                        <div id="sendEmail">
+                            <!-- email icon -->
+                            <!-- when this is clicked, using jquery, show the form below and submit send me an email -->
+                            <i class="far fa-envelope"></i>
+                        </div>
                     </div>
-                    <!-- email modal button -->
-                    <div id="sendEmail">
-                        <!-- email icon -->
-                        <!-- when this is clicked, using jquery, show the form below and submit send me an email -->
-                        <i class="far fa-envelope"></i>
+                    <!-- this form should be a modal controlled by envelope icon -->
+                    <div class="card-body" id="emailForm">
+                        <form>
+                            <div class="form-group">
+                                <label for="Name">Name:</label>
+                                <input type="name" class="form-control" id="Name" placeholder="Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="Email1">Email:</label>
+                                <input type="email" class="form-control" id="Email" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <label for=" Email1msg">Message:</label>
+                                <textarea name="message" class="form-control" placeholder="Leave a message"
+                                    required></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-info">Submit</button>
+                        </form>
                     </div>
                 </div>
-                <!-- this form should be a modal controlled by envelope icon -->
-                <div class="card-body" id="emailForm">
-                    <form>
-                        <div class="form-group">
-                            <label for="Name">Name:</label>
-                            <input type="name" class="form-control" id="Name" placeholder="Name">
-                        </div>
-                        <div class="form-group">
-                            <label for="Email1">Email:</label>
-                            <input type="email" class="form-control" id="Email" placeholder="Email">
-                        </div>
-                        <div class="form-group">
-                            <label for=" Email1msg">Message:</label>
-                            <textarea name="message" class="form-control" placeholder="Leave a message"
-                                required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-info">Submit</button>
-                    </form>
-                </div>
-
-
             </div>
+            <div class="col-xs-0 col-sm-1 col-md-2"></div>
         </div>
-        <div class="col-xs-0 col-sm-1 col-md-2"></div>
     </div>
-</div>
 
-<!-- footer should stick to bottom of page -->
-<footer id="sticky-footer" class="fixed-bottom py-3 bg-dark text-white-50 content">
-    <div class="container text-center">
-        <small>Copyright &copy;</small>
-    </div>
-</footer>
+    <!-- footer should stick to bottom of page -->
+    <footer id="sticky-footer" class="fixed-bottom py-3 bg-dark text-white-50 content">
+        <div class="container text-center">
+            <small>Copyright &copy;</small>
+        </div>
+    </footer>
 
-<!-- font awesome - icons -->
-<script src="https://kit.fontawesome.com/b70c89d96b.js" crossorigin="anonymous"></script>
-<!-- jquery -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-<!-- popper for bootstrap -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="assets/javascript/app.js"></script>
-</body>
+    <!-- font awesome - icons -->
+    <script src="https://kit.fontawesome.com/b70c89d96b.js" crossorigin="anonymous"></script>
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <!-- popper for bootstrap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="assets/javascript/app.js"></script>
+    </body>
 
 </html>
