added featured projects

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <!-- navbar should stick to top of scrolling window -->
 <!-- navbar toggler not working -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark content">
+<nav class="navbar-nav navbar-expand-md navbar-dark bg-dark content">
     <a class="navbar-brand" href="index.html">Mike Stanley</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
         aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
@@ -255,29 +255,40 @@
                     <h4>Featured Projects</h4>
                     <hr>
                     <div class="row" id="projectRow1">
+                        <!-- TollTally App -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <a href="">
-                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                <a href="https://mr-stan.github.io/Project1/" target="_blank">
+                                    <img class="figure-img img-fluid rounded" src="assets/images/tolltally.PNG"
+                                        alt="TollTally Web Application Screenshot">
                                 </a>
                             </figure>
-                            <h5 class="projectLabel">Balloon Game</h5>
+                            <a href="https://github.com/MR-Stan/Project1" target="_blank">
+                                <h5 class="projectLabel">TollTally</h5>
+                            </a>
                         </div>
+                        <!-- Star Wars RPG -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <a href="">
-                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                <a href="https://mr-stan.github.io/unit-4-game/" target="_blank">
+                                    <img class="figure-img img-fluid rounded" src="assets/images/starwars.PNG"
+                                        alt="Starwars RPG screenshot">
                                 </a>
                             </figure>
-                            <h5 class="projectLabel">Dogger</h5>
+                            <a href="https://github.com/MR-Stan/unit-4-game" target="_blank">
+                                <h5 class="projectLabel">Star Wars RPG</h5>
+                            </a>
                         </div>
+                        <!-- Train Scheduler -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <a href="">
-                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                <a href="https://mr-stan.github.io/Train-Scheduler/" target="_blank">
+                                    <img class="figure-img img-fluid rounded" src="assets/images/train.PNG" alt="text">
                                 </a>
                             </figure>
-                            <h5 class="projectLabel">Sandbox</h5>
+                            <a href="https://github.com/MR-Stan/Train-Scheduler" target="_blank">
+                                <h5 class="projectLabel">Train Scheduler</h5>
+                            </a>
                         </div>
                     </div>
                     <br>
@@ -287,55 +298,67 @@
                     <div class="row" id="projectRow2">
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <a href="">
+                                <a href="" target="_blank">
                                     <img class="figure-img img-fluid rounded" src="" alt="text">
                                 </a>
                             </figure>
-                            <h5 class="projectLabel">Vine-Yo</h5>
+                            <a href="" target="_blank">
+                                <h5 class="projectLabel">Vine-Yo</h5>
+                            </a>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <a href="">
+                                <a href="" target="_blank">
                                     <img class="figure-img img-fluid rounded" src="" alt="text">
                                 </a>
                             </figure>
-                            <h5 class="projectLabel">Trail Finder</h5>
+                            <a href="" target="_blank">
+                                <h5 class="projectLabel">Trail Finder</h5>
+                            </a>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <a href="">
+                                <a href="" target="_blank">
                                     <img class="figure-img img-fluid rounded" src="" alt="text">
                                 </a>
                             </figure>
-                            <h5 class="projectLabel">Vine-Yo</h5>
+                            <a href="" target="_blank">
+                                <h5 class="projectLabel">Vine-Yo</h5>
+                            </a>
                         </div>
-                        <!-- row 3 -->
-                        <!-- <div class="row" id="projectRow3">
+                    </div>
+                    <!-- row 3 projects -->
+                    <div class="row" id="projectRow3">
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <a href="">
+                                <a href="" target="_blank">
                                     <img class="figure-img img-fluid rounded" src="" alt="text">
                                 </a>
                             </figure>
-                            <h5 class="projectLabel">Name</h5>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <figure class="figure">
-                                <a href="">
-                                    <img class="figure-img img-fluid rounded" src="" alt="text">
-                                </a>
-                            </figure>
-                            <h5 class="projectLabel">Name</h5>
+                            <a href="" target="_blank">
+                                <h5 class="projectLabel">Name</h5>
+                            </a>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <a href="">
+                                <a href="" target="_blank">
                                     <img class="figure-img img-fluid rounded" src="" alt="text">
                                 </a>
                             </figure>
-                            <h5 class="projectLabel">Name</h5>
-                        </div> -->
-
+                            <a href="" target="_blank">
+                                <h5 class="projectLabel">Name</h5>
+                            </a>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-xl-4">
+                            <figure class="figure">
+                                <a href="" target="_blank">
+                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                </a>
+                            </figure>
+                            <a href="" target="_blank">
+                                <h5 class="projectLabel">Name</h5>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
